g261quater : format .np v3 CERTIFIE 535/535 EOF-exact -- blocage historique leve
Bug trouve en generalisant l'oracle a plus de fichiers : le parseur ARM lit aussi 3 octets EN LIGNE
(pas via le helper partage readByte), trouves par scan systematique de tout ldrb rX,[rY],#1 dans
ParticleEmitter::load (native/tools/disasm.py). Conditionnels, coherents avec les champs optionnels de
readSpawnShape (ellipse). 3 breakpoints ajoutes avec la bonne semantique de registre (dereference
simple, pas double comme read4/readByte).

Verificateur automatique EOF-exact ecrit (eofExactMultiEmitter) : gere le multi-emitter, deduit
poolSize/tagLen des 2 derniers hits int avant chaque trou (ils sont eux-memes lus via read4, pas un
pre-champ separe comme suppose dans une 1re version buguee) puis verifie que le trailer retombe pile
sur l'emitter suivant ou EOF. Decodage confirme en clair (tag="fireworks_b" = vrai nom de region
d'atlas).

NpFormatOracle verify (parcours recursif, 1 seul atlas bidon reutilise pour tous les fichiers) sur les
535 .np reels de l'APK (29 sous-arborescences, UI+unites+environnements) -> 535/535 EOF-exact. Le
format est CERTIFIE au sens du critere pose depuis juillet dans NP_FORMAT.md, apres 2 tentatives
manuelles precedentes a 0/535 chacune.

Reste : nommer chaque champ de la sequence complete + ecrire cparticle_jni.c (parsing+simulation
portee du ParticleEmitter clair de game.jar+rendu 2-couleurs) + cablage + certification differentielle
en combat -- travail d'ingenierie C classique desormais, plus aucune inconnue bloquante.